# customer-churn-prediction

./: .env  .gitignore  individual_explanation.html  mlflow.db  pyproject.toml  shap_explainer.pkl  verify_mlflow.py
mlartifacts/2/ef0e9e8b9d2a4732a248aa5f6f0c8e8e/artifacts/: shap_explainer.pkl
mlartifacts/2/models/m-b2cdbd4d263940ada191e94eeceda719/artifacts/: MLmodel  model.pkl
mlartifacts/2/models/m-c4309cb5df15445192b0002406e5d7c6/artifacts/: MLmodel  conda.yaml  model.pkl
mlartifacts/2/models/m-c8efea93182e4a4988810b44f593a90e/artifacts/: MLmodel
mlartifacts/2/models/m-e89c20fab75c43aa88c2042b8b47294f/artifacts/: MLmodel
src/shared/: config.py  data_loader.py
src/training/: train.py
