[project]
name = "anchor"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.0,<3.0.0)",
    "mlflow (>=3.10.1,<4.0.0)",
    "optuna (>=4.8.0,<5.0.0)",
    "shap (>=0.51.0,<0.52.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "docker (>=7.1.0,<8.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.7,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "dvc (>=3.67.0,<4.0.0)"
]
